Se cambia el archivo de pipeline al root

--- a/params/parameters.yaml
+++ b/params/parameters.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: CloudFormation template for defining parameters for secrets
+Description: CloudFormation template for defining parameters
 
 
 Parameters:
