Se agregan secrets

--- a/secrets/secrets.yaml
+++ b/secrets/secrets.yaml
@@ -24,8 +24,7 @@ Resources:
       Properties:
         Name: "DBUserName"
         Description: The username of the database
-      SecretString:
-        DBUserName: !Ref DBUserName
+      SecretString: !Ref DBUserName
       Tags:
         - Key: App
           Value: 
@@ -49,8 +48,7 @@ Resources:
       Properties:
         Name: "DBPassword"
         Description: The username of the database
-      SecretString:
-        DBUserName: !Ref DBUserName
+      SecretString: !Ref DBUserName
       Tags:
         - Key: App
           Value: 
