Se agregan secrets

--- a/secrets/secrets.yaml
+++ b/secrets/secrets.yaml
@@ -34,10 +34,10 @@ Resources:
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-OwnerTag
-          - Key: Environment
-            Value: 
-              Fn::ImportValue:
-                !Sub ${StackParametersName}-EnvironmentTag
+          # - Key: Environment
+          #   Value: 
+          #     Fn::ImportValue:
+          #       !Sub ${StackParametersName}-EnvironmentTag
           - Key: AppManagerCFNStackKey
             Value: 
               Fn::ImportValue:
@@ -58,10 +58,10 @@ Resources:
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-OwnerTag
-          - Key: Environment
-            Value: 
-              Fn::ImportValue:
-                !Sub ${StackParametersName}-EnvironmentTag
+          # - Key: Environment
+          #   Value: 
+          #     Fn::ImportValue:
+          #       !Sub ${StackParametersName}-EnvironmentTag
           - Key: AppManagerCFNStackKey
             Value: 
               Fn::ImportValue:
