Se agregan secrets, se cambia el nombre del stack de secrets

--- a/secrets/secrets.yaml
+++ b/secrets/secrets.yaml
@@ -18,7 +18,7 @@ Parameters:
     Default: DBPassword
 
 Resources:
-  
+
     DBUserNameSecret:
       Type: AWS::SecretsManager::Secret
       Properties:
@@ -26,7 +26,7 @@ Resources:
         Description: The username of the database
         SecretString: !Ref DBUserName
         Tags:
-          - Key: App
+          - Key: Application
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-AppTag
@@ -34,10 +34,10 @@ Resources:
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-OwnerTag
-          # - Key: Environment
-          #   Value: 
-          #     Fn::ImportValue:
-          #       !Sub ${StackParametersName}-EnvironmentTag
+          - Key: Environment
+            Value: 
+              Fn::ImportValue:
+                !Sub ${StackParametersName}-EnvironmentTag
           - Key: AppManagerCFNStackKey
             Value: 
               Fn::ImportValue:
@@ -48,9 +48,9 @@ Resources:
       Properties:
         Name: "DBPassword"
         Description: The username of the database
-        SecretString: !Ref DBUserName
+        SecretString: !Ref DBPassword
         Tags:
-          - Key: App
+          - Key: Application
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-AppTag
@@ -58,11 +58,12 @@ Resources:
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-OwnerTag
-          # - Key: Environment
-          #   Value: 
-          #     Fn::ImportValue:
-          #       !Sub ${StackParametersName}-EnvironmentTag
+          - Key: Environment
+            Value: 
+              Fn::ImportValue:
+                !Sub ${StackParametersName}-EnvironmentTag
           - Key: AppManagerCFNStackKey
+
             Value: 
               Fn::ImportValue:
                 !Sub ${StackParametersName}-AppManagerCFNStackKeyTag
