Se cambia la descripción del DBPassword

--- a/secrets/secrets.yaml
+++ b/secrets/secrets.yaml
@@ -47,7 +47,7 @@ Resources:
       Type: AWS::SecretsManager::Secret
       Properties:
         Name: "DBPassword"
-        Description: The username of the database
+        Description: The password of the database
         SecretString: !Ref DBPassword
         Tags:
           - Key: Application
